# plevelai_ros

./: .env  Makefile  README.md  compose.yml
docker/: Dockerfile  entrypoint.sh
src/plevelai_control/: package.xml  setup.cfg  setup.py
src/plevelai_control/launch/: plevelai_mock_pipeline.launch.py
src/plevelai_control/plevelai_control/: firing_node.py  mock_laser.py  serial_sim.py  targeting_node.py
src/plevelai_control/plevelai_control/nodes/: aim_controller.py  fire_controller.py  mock_laser.py  serial_sim.py
src/plevelai_control/resource/: plevelai_control
src/plevelai_interfaces/: CMakeLists.txt  package.xml
src/plevelai_interfaces/msg/: WeedDetection.msg
src/plevelai_vision/: package.xml  setup.cfg  setup.py
src/plevelai_vision/launch/: vision_mock.launch.py
src/plevelai_vision/plevelai_vision/: detector_node.py  mock_camera.py
src/plevelai_vision/plevelai_vision/nodes/: mock_camera.py  weed_detector.py
src/plevelai_vision/resource/: plevelai_vision
