<?xml version="1.0"?>
<package format="3">
  <name>plevelai_control</name>
  <version>0.1.0</version>
  <description>Targeting & firing control (mocks)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>plevelai_interfaces</exec_depend>
</package>
