<?xml version="1.0"?>
<package format="3">
  <name>plevelai_interfaces</name>
  <version>0.1.0</version>
  <description>PlevelAI custom messages</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
